--- a/FUSS/requirements.txt
+++ b/FUSS/requirements.txt
@@ -1,15 +1,29 @@
+bcrypt>=3.1.3
+certifi>=2017.4.17
+cffi>=1.10.0
+chardet>=3.0.4
 click>=6.7
 cycler>=0.10.0
 Flask>=0.12.2
+Flask-Bcrypt>=0.7.1
+Flask-MQTT>=0.0.3
+Flask-SQLAlchemy>=2.2
+idna>=2.5
 itsdangerous>=0.24
 Jinja2>=2.9.6
 MarkupSafe>=1.0
 matplotlib>=2.0.2
+mysqlclient>=1.3.10
 numpy>=1.12.1
+paho-mqtt>=1.2.3
 pip>=9.0.1
+pycparser>=2.17
 pyparsing>=2.2.0
 python-dateutil>=2.6.0
 pytz>=2017.2
+requests>=2.17.3
 setuptools>=28.8.0
 six>=1.10.0
+SQLAlchemy>=1.1.10
+urllib3>=1.21.1
 Werkzeug>=0.12.2
